codigo/variables/error_variable_3.out
  File "<stdin>", line 1
    hola mundo = 'hola mundo'
         ^
SyntaxError: invalid syntax